force-app/main/default/objects/JBCXM__GSEntityConfigMapping__c/JBCXM__GSEntityConfigMapping__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Entity Config Mapping</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Config Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>