force-app/main/default/objects/JBCXM__GSEntityConfigMapping__c/fields/JBCXM__Accessibility__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Accessibility__c</fullName>
    <defaultValue>&quot;OWNER&quot;</defaultValue>
    <label>Accessibility</label>
    <length>20</length>
    <type>Text</type>
</CustomField>