force-app/main/default/objects/JBCXM__GSEntityConfigMapping__c/fields/JBCXM__CTAType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CTAType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTA Type</label>
    <referenceTo>JBCXM__CTATypes__c</referenceTo>
    <relationshipLabel>Relationship config mapping</relationshipLabel>
    <relationshipName>RelationshipConfigMap</relationshipName>
    <type>Lookup</type>
</CustomField>