force-app/main/default/objects/JBCXM__GSEntityConfigMapping__c/fields/JBCXM__Picklist__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist</label>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Relationship config mapping</relationshipLabel>
    <relationshipName>RelationshipConfigMap</relationshipName>
    <type>Lookup</type>
</CustomField>